# serializer version: 1
# name: TestFpinballGenerator.test_generate
  tuple(
    list([
      'Path(/usr/wine/wine-tkg/bin/wine)',
      'explorer',
      '/desktop=Wine,1920x1080',
      'Path(/userdata/system/wine-bottles/fpinball/fpinball/BAM/FPLoader.exe)',
      '/open',
      'Z:\\userdata\\roms\\fpinball\\rom.fpt',
      '/play',
      '/exit',
    ]),
    dict({
      'LD_LIBRARY_PATH': '/lib32:/usr/wine/wine-tkg/lib/wine',
      'LIBGL_DRIVERS_PATH': '/lib32/dri',
      'PIPEWIRE_MODULE_DIR': '/usr/lib/pipewire-0.3:/lib32/pipewire-0.3',
      'SPA_PLUGIN_DIR': '/usr/lib/spa-0.2:/lib32/spa-0.2',
      'WINEPREFIX': 'Path(/userdata/system/wine-bottles/fpinball)',
    }),
  )
# ---
# name: TestFpinballGenerator.test_generate[regedit]
  '''
  Windows Registry Editor Version 5.00
  
  [HKEY_CURRENT_USER\Software\Future Pinball\GamePlayer]
  "AspectRatio"=dword:0000002b
  "FullScreen"=dword:00000001
  "Width"=dword:00000780
  "Height"=dword:00000438
  "JoypadNameNum"=dword:00000001
  
  
  '''
# ---
# name: TestFpinballGenerator.test_generate_config[{'ratio': '16/10'}][regedit]
  '''
  Windows Registry Editor Version 5.00
  
  [HKEY_CURRENT_USER\Software\Future Pinball\GamePlayer]
  "AspectRatio"=dword:0000002b
  "FullScreen"=dword:00000001
  "Width"=dword:00000780
  "Height"=dword:00000438
  "JoypadNameNum"=dword:00000001
  
  
  '''
# ---
# name: TestFpinballGenerator.test_generate_config[{'ratio': '16/9'}][regedit]
  '''
  Windows Registry Editor Version 5.00
  
  [HKEY_CURRENT_USER\Software\Future Pinball\GamePlayer]
  "AspectRatio"=dword:000000a9
  "FullScreen"=dword:00000001
  "Width"=dword:00000780
  "Height"=dword:00000438
  "JoypadNameNum"=dword:00000001
  
  
  '''
# ---
# name: TestFpinballGenerator.test_generate_config[{'ratio': '4/3'}][regedit]
  '''
  Windows Registry Editor Version 5.00
  
  [HKEY_CURRENT_USER\Software\Future Pinball\GamePlayer]
  "AspectRatio"=dword:0000002b
  "FullScreen"=dword:00000001
  "Width"=dword:00000780
  "Height"=dword:00000438
  "JoypadNameNum"=dword:00000001
  
  
  '''
# ---
# name: TestFpinballGenerator.test_generate_config[{}][regedit]
  '''
  Windows Registry Editor Version 5.00
  
  [HKEY_CURRENT_USER\Software\Future Pinball\GamePlayer]
  "AspectRatio"=dword:0000002b
  "FullScreen"=dword:00000001
  "Width"=dword:00000780
  "Height"=dword:00000438
  "JoypadNameNum"=dword:00000001
  
  
  '''
# ---
# name: TestFpinballGenerator.test_generate_config_rom
  tuple(
    list([
      'Path(/usr/wine/wine-tkg/bin/wine)',
      'explorer',
      '/desktop=Wine,1920x1080',
      'Path(/userdata/system/wine-bottles/fpinball/fpinball/BAM/FPLoader.exe)',
    ]),
    dict({
      'LD_LIBRARY_PATH': '/lib32:/usr/wine/wine-tkg/lib/wine',
      'LIBGL_DRIVERS_PATH': '/lib32/dri',
      'PIPEWIRE_MODULE_DIR': '/usr/lib/pipewire-0.3:/lib32/pipewire-0.3',
      'SPA_PLUGIN_DIR': '/usr/lib/spa-0.2:/lib32/spa-0.2',
      'WINEPREFIX': 'Path(/userdata/system/wine-bottles/fpinball)',
    }),
  )
# ---
# name: TestFpinballGenerator.test_generate_controllers[regedit]
  '''
  Windows Registry Editor Version 5.00
  
  [HKEY_CURRENT_USER\Software\Future Pinball\GamePlayer]
  "AspectRatio"=dword:0000002b
  "FullScreen"=dword:00000001
  "Width"=dword:00000780
  "Height"=dword:00000438
  "JoypadNameNum"=dword:00000001
  
  [HKEY_CURRENT_USER\Software\Future Pinball\GamePlayer\Joypads\real name 1]
  "JoypadBackbox"=dword:00000000
  "JoypadDeadZone"=dword:00000064
  "JoypadDigitalPlunger"=dword:00000001
  "JoypadExit"=dword:ffffffff
  "JoypadInsertCoin"=dword:00000008
  "JoypadInsertCoin2"=dword:ffffffff
  "JoypadInsertCoin3"=dword:ffffffff
  "JoypadLeft2ndFlipper"=dword:ffffffff
  "JoypadLeftFlipper"=dword:00000004
  "JoypadMusicDown"=dword:ffffffff
  "JoypadMusicUp"=dword:ffffffff
  "JoypadNextCamera"=dword:00000003
  "JoypadNudgeAxisX"=dword:ffffffff
  "JoypadNudgeAxisY"=dword:ffffffff
  "JoypadNudgeGainX"=dword:000003e8
  "JoypadNudgeGainXMax"=dword:00000002
  "JoypadNudgeGainY"=dword:000003e8
  "JoypadNudgeGainYMax"=dword:00000002
  "JoypadPause"=dword:00000002
  "JoypadPinballRoller"=dword:ffffffff
  "JoypadPinballRollerAxisX"=dword:ffffffff
  "JoypadPinballRollerAxisY"=dword:ffffffff
  "JoypadPinballRollerGainX"=dword:000003e8
  "JoypadPinballRollerGainXMax"=dword:00000002
  "JoypadPinballRollerGainY"=dword:000003e8
  "JoypadPinballRollerGainYMax"=dword:00000002
  "JoypadPlungerAxis"=dword:00000001
  "JoypadPlungerGain"=dword:000003e8
  "JoypadPlungerGainMax"=dword:00000002
  "JoypadRight2ndFlipper"=dword:ffffffff
  "JoypadRightFlipper"=dword:00000005
  "JoypadService"=dword:ffffffff
  "JoypadSpecial1"=dword:ffffffff
  "JoypadSpecial2"=dword:ffffffff
  "JoypadStartGame"=dword:00000009
  "JoypadSupport"=dword:00000001
  "JoypadTest"=dword:ffffffff
  "JoypadToggleHud"=dword:0000000c
  "JoypadVolumeDown"=dword:ffffffff
  "JoypadVolumeUp"=dword:ffffffff
  
  
  '''
# ---
# name: TestFpinballGenerator.test_generate_nvidia
  tuple(
    list([
      'Path(/usr/wine/wine-tkg/bin/wine)',
      'explorer',
      '/desktop=Wine,1920x1080',
      'Path(/userdata/system/wine-bottles/fpinball/fpinball/BAM/FPLoader.exe)',
      '/open',
      'Z:\\userdata\\roms\\fpinball\\rom.fpt',
      '/play',
      '/exit',
    ]),
    dict({
      'LD_LIBRARY_PATH': '/lib32:/usr/wine/wine-tkg/lib/wine',
      'LIBGL_DRIVERS_PATH': '/lib32/dri',
      'PIPEWIRE_MODULE_DIR': '/usr/lib/pipewire-0.3:/lib32/pipewire-0.3',
      'SPA_PLUGIN_DIR': '/usr/lib/spa-0.2:/lib32/spa-0.2',
      'VK_ICD_FILENAMES': '/usr/share/vulkan/icd.d/nvidia_icd.x86_64.json',
      'VK_LAYER_PATH': '/usr/share/vulkan/explicit_layer.d',
      'WINEPREFIX': 'Path(/userdata/system/wine-bottles/fpinball)',
    }),
  )
# ---
# name: TestFpinballGenerator.test_generate_nvidia[environ]
  dict({
    'FOO': 'BAR',
  })
# ---
# name: TestFpinballGenerator.test_get_hotkeys_context
  dict({
    'keys': dict({
      'exit': list([
        'KEY_LEFTALT',
        'KEY_F4',
      ]),
    }),
    'name': 'fpinball',
  })
# ---
